# pybind_expose_stan_fns

./: .gitignore  LICENSE  README.md  basic.stan  build.sh  expose_stan_functions.py  preprocess.py  pyproject.toml  setup.cfg  test_basic.py
.github/: windows-env.yml
.github/workflows/: main.yaml
misc/: build.ps1  build.sh  setuptools_version.py
pybind_stan_fns/: __init__.py  preprocess.py
src/: expose_stan_functions.py  preprocess.py  setuptools_version.py
test/: basic.stan  test_basic.py
