[metadata]
name = pybind_stan_fns
author = Brian Ward
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/WardBrian/scikit-stan

[options]
packages = find:

install_requires =
    cmdstanpy>=1.0.6
    numpy>=1.21.0
    pybind11

[options.extras_require]
test =
    pytest


[flake8]
ignore = E265, E127,E201,E202,E203,E231,E252,E266,E402,E999,F841,W503,W605, W291
max-line-length = 100
exclude = .git
