[metadata]
name = pybind_stan_fns
author = Brian Ward
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/WardBrian/pybind_expose_stan_fns

[options]
packages = find:

install_requires =
    cmdstanpy>=1.0.6
    numpy>=1.21.0
    pybind11

[options.extras_require]
test =
    pytest
